# portal_rodten23

./: .env-example  .gitignore  README.md  app.py  azure-pipelines.yml  pyproject.toml  requirements.txt
.github/workflows/: azure-webapps-python.yml  main_rodrigoalvestenorio.yml  main_rodrigotenorio.yml
portal_rodten23/: app.py  calculo_idade.py
portal_rodten23/static/: script.js  style.css
portal_rodten23/templates/: contract.html  index.html
static/: script.js  style.css
templates/: index.html
