[tool.poetry]
name = "portal_rodten23"
version = "0.1.0"
description = ""
authors = ["Rodrigo Alves Tenório <rodten23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
flask-mail = "^0.10.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.8.4"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'flask --app portal_rodten23/app.py run'
pre_test = 'task lint'
test = 'pytest -s -x --cov=portal_rodten23 -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
